init metamodel build step